--- a/Pipfile
+++ b/Pipfile
@@ -5,10 +5,10 @@ verify_ssl = true
 
 [dev-packages]
 autopep8 = "*"
-
-[packages]
-requests = "*"
-click = "*"
+pytest = "*"
 
 [requires]
 python_version = "3.8"
+
+[packages]
+mkweather = {editable = true, path = "."}
